aesthetics of research rection

--- a/index.html
+++ b/index.html
@@ -44,25 +44,25 @@
           <div class="card-accent accent-rose"></div>
           <h3>Post-training & optimization</h3>
           <p>Efficient RLHF, preference modeling, orthogonal/manifold methods, and evaluation data pipelines.</p>
-          <span class="card-tag">ML</span>
+          <span class="card-tag card-tag-rose">ML</span>
         </div>
         <a href="https://www.trytrust.ai/" target="_blank" rel="noopener" class="card card-link">
           <div class="card-accent accent-rose"></div>
           <h3>Trust AI</h3>
           <p>Making a cool company about AI governance with Hannah Chung!</p>
-          <span class="card-tag">ML</span>
+          <span class="card-tag card-tag-rose">ML</span>
         </a>
         <div class="card">
           <div class="card-accent accent-sage"></div>
           <h3>Gravitational-wave analysis</h3>
           <p>Coherence dashboards and analysis scripts for detector artifacts and cross-channel effects.</p>
-          <span class="card-tag">Physics</span>
+          <span class="card-tag card-tag-sage">Physics</span>
         </div>
         <div class="card">
           <div class="card-accent accent-gold"></div>
           <h3>Systems and physics</h3>
           <p>Trajectory modeling and resource-allocation prototypes with clarity and reproducibility.</p>
-          <span class="card-tag">Systems</span>
+          <span class="card-tag card-tag-gold">Systems</span>
         </div>
       </div>
     </section>
