--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="card">
           <div class="card-accent accent-gold"></div>
           <h3>Systems and physics</h3>
-          <p>Trajectory modeling and resource-allocation prototypes with clarity and reproducibility.</p>
+          <p>Trajectory modeling and resource-allocation prototypes for Golden Dome using RL and LP algorithms.</p>
           <span class="card-tag card-tag-gold">Systems</span>
         </div>
       </div>
