--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
           <p class="eyebrow">CS × Physics at MIT</p>
           <h1>Medha Venkatapathy</h1>
           <p class="intro">
-            Hi! I like ML research, AI alignment, and building useful tools. Currently interested in efficient post-training methods, on-policy RL, and optimizers. Long term, I want to work at a frontier ML research lab and I will be applying to PhD programs in Fall 2026.
+            Hi! I like ML research, AI alignment, and building useful tools. Currently interested in optimizers and on-policy RL. My research is advised by Morris Yau and Jacob Andreas. Long term, I want to work at a frontier ML research lab and I will be applying to PhD programs in Fall 2026.
           </p>
-          <p class="currently">Currently: trying to improve the Muon optimizer and building Trust AI :></p>
           <div class="hero-tags">
             <span class="tag tag-rose">machine learning</span>
             <span class="tag tag-sage">physics</span>
