--- a/index.html
+++ b/index.html
@@ -87,14 +87,9 @@
           <img src="pictures/camel_small.jpg" alt="Riding a camel" class="fun-image-full">
           <span class="fun-label">Traveling</span>
         </div>
-        <div class="fun-item">
-          <div class="fun-image-placeholder">
-            <span>image</span>
-          </div>
-          <div class="fun-text">
-            <strong>Hiking</strong>
-            <p>Quiet trails, big skies</p>
-          </div>
+        <div class="fun-item fun-item-image-only">
+          <img src="pictures/hiking_small.jpg" alt="Hiking" class="fun-image-full">
+          <span class="fun-label">Hiking</span>
         </div>
       </div>
     </section>
