--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <p class="eyebrow">CS × Physics at MIT</p>
           <h1>Medha Venkatapathy</h1>
           <p class="intro">
-            Hi! I like ML research, AI alignment, and building useful tools. Currently interested in optimizers and on-policy RL. My research is advised by Morris Yau and Jacob Andreas. Long term, I want to work at a frontier ML research lab and I will be applying to PhD programs in Fall 2027.
+            Hi! I like ML research, AI alignment, and building useful tools. My research is advised by Morris Yau and Jacob Andreas. Long term, I want to work at a frontier ML research lab and I will be applying to PhD programs in Fall 2027.
           </p>
           <div class="rotating-text-wrapper">
             <span class="rotating-text">Currently: improving the Muon optimizer</span>
