--- a/index.html
+++ b/index.html
@@ -181,9 +181,8 @@
     // === 1. Dark Mode Toggle ===
     const toggle = document.querySelector('.theme-toggle');
     const saved = localStorage.getItem('theme');
-    if (saved) {
-      document.documentElement.setAttribute('data-theme', saved);
-    }
+    // Default to dark if no preference saved yet
+    document.documentElement.setAttribute('data-theme', saved ?? 'dark');
     function updateToggleIcon() {
       const isDark = document.documentElement.getAttribute('data-theme') === 'dark';
       toggle.innerHTML = isDark ? '&#9788;' : '&#9790;';
